Fix: fixed the stretched favicon and fixed table content padding

--- a/styles.css
+++ b/styles.css
@@ -171,11 +171,11 @@ tbody :hover {
 }
 
 th {
-  padding: 0.5rem 0.2rem;
+  padding: 0.5rem 1rem;
 }
 
 td {
-  padding: 0.5rem 0.2rem;
+  padding: 0.5rem 1rem;
 }
 
 .counts {
